[gd_scene load_steps=4 format=3 uid="uid://dh56y8rbgn2lh"]

[ext_resource type="Script" path="res://scripts/ui/mobile_controls.gd" id="1_3l8r2"]
[ext_resource type="PackedScene" uid="uid://c4m7wdyd3ojh3" path="res://scenes/ui/virtual_joystick.tscn" id="2_n41j0"]
[ext_resource type="PackedScene" uid="uid://b7s0kl2mjfx4v" path="res://scenes/ui/touch_button.tscn" id="3_k5jvu"]

[node name="MobileControlsLayer" type="CanvasLayer"]
layer = 100
script = ExtResource("1_3l8r2")

[node name="MobileControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftSide" type="Control" parent="MobileControls"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -280.0
offset_right = 280.0
offset_bottom = -30.0
grow_vertical = 0
mouse_filter = 2

[node name="VirtualJoystick" parent="MobileControls/LeftSide" instance=ExtResource("2_n41j0")]
layout_mode = 1

[node name="RightSide" type="Control" parent="MobileControls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -300.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="ShootButton" parent="MobileControls/RightSide" instance=ExtResource("3_k5jvu")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -140.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
action_name = "shoot"
button_text = "ðŸ”«"

[node name="JumpButton" parent="MobileControls/RightSide" instance=ExtResource("3_k5jvu")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 30.0
offset_right = -20.0
offset_bottom = 150.0
grow_horizontal = 0
action_name = "jump"
button_text = "â†‘"

[node name="ReloadButton" parent="MobileControls/RightSide" instance=ExtResource("3_k5jvu")]
layout_mode = 1
offset_left = 30.0
offset_top = 30.0
offset_right = 130.0
offset_bottom = 130.0
action_name = "reload"
button_text = "âŸ²"

[node name="DashButton" parent="MobileControls/RightSide" instance=ExtResource("3_k5jvu")]
layout_mode = 1
offset_left = 150.0
offset_top = 30.0
offset_right = 250.0
offset_bottom = 130.0
action_name = "dash"
button_text = "âš¡"
